--- a/applications/dashboard/styleguide/section-2.html
+++ b/applications/dashboard/styleguide/section-2.html
@@ -16,6 +16,7 @@
   <script src="public/jquery.tablejenga.js"></script>
   <script src="public/jquery.fluidfixed.js"></script>
   <script src="public/jquery.expander.js"></script>
+  <script src="public/jquery.gardencheckboxgrid.js"></script>
   <script>
     gdn = function() {
 
@@ -107,6 +108,7 @@
           <li><a href="#2-2" class="nav-link"><!--<span class="kss-ref badge" >2-2</span> -->Flex Helpers</a></li>
           <li><a href="#2-3" class="nav-link"><!--<span class="kss-ref badge" >2-3</span> -->Float Helpers</a></li>
           <li><a href="#2-5" class="nav-link"><!--<span class="kss-ref badge" >2-5</span> -->Hidden Helper</a></li>
+          <li><a href="#2-6" class="nav-link"><!--<span class="kss-ref badge" >2-6</span> -->Progress Spinner</a></li>
         </ul>
       </div>
     </div>
@@ -364,6 +366,22 @@ It also add a small margin to its items. Most of the flex elements in the dashbo
               <div class="kss-example padded-bottom"><div class="[modifier class]">I am some text.</div></div>
               <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">hides an element</span> <span class="pull-right"><code>.hidden</code></span></div>
               <div class="kss-example padded-bottom"><div class="hidden">I am some text.</div></div>
+          </section>
+          <section class="kss-depth-2">
+            <div class="kss-component">
+              <div class="kss-component-description row full-border">
+                <h2 class="kss-title padded" id="2-6">
+                <span class="kss-ref badge pull-right">2-6</span> Progress Spinner
+                </h2>
+
+
+                <div class="kss-box padded"><p>Indicates some kind of progess is occuring.</p>
+</div>
+
+                <pre class="prettyprint lang-html padded-bottom" style="background-color: #fff">&lt;div class=&quot;progress&quot;&gt;&lt;/div&gt;</pre>
+              </div>
+              <div class="kss-example-heading-wrap padded-top"><span class="italic kss-example-heading">Default styling</span></div>
+              <div class="kss-example padded-bottom"><div class="progress"></div></div>
           </section>
     </div>
     <div class="footer">
