--- a/applications/dashboard/styleguide/section-10.html
+++ b/applications/dashboard/styleguide/section-10.html
@@ -16,6 +16,7 @@
   <script src="public/jquery.tablejenga.js"></script>
   <script src="public/jquery.fluidfixed.js"></script>
   <script src="public/jquery.expander.js"></script>
+  <script src="public/jquery.gardencheckboxgrid.js"></script>
   <script>
     gdn = function() {
 
